--- a/spotify-App/src/assets/main.css
+++ b/spotify-App/src/assets/main.css
@@ -1,12 +1,12 @@
 @import './base.css';
 
-#app {
+/* #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
 
   font-weight: normal;
-}
+} */
 
 a,
 .green {
@@ -21,7 +21,7 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
   body {
     display: flex;
     place-items: center;
@@ -33,3 +33,4 @@ a,
     padding: 0 2rem;
   }
 }
+ */
